# financial_helper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  environment.yml  pyproject.toml  test_akshare_concepts.py  test_tushare.py
.cursor/rules/: architecture-guard.mdc  architecture.md  database-model.mdc  dependency-injection.mdc  docstring-standards.mdc  logging-standards.mdc  openspec-docs.mdc  spec-driven-testing.mdc  testing-conventions.mdc  testing.md  workflow.md
.github/workflows/: ci.yml
docs/: architecture-guard-usage.md  ddd-best-practices.md  scaffold-new-module.md  using-skeleton-for-new-project.md
docs/archive/: architecture-assessment-and-target-structure.md  architecture-guard-usage.md  architecture-review-and-upgrade.md  ddd-best-practices.md  scaffold-new-module.md  using-skeleton-for-new-project.md
docs/plans/: 2026-02-19-architecture-guard-design.md  2026-02-19-architecture-guard-implementation.md  2026-02-19-ddd-fastapi-skeleton-design.md  2026-02-19-ddd-skeleton-refactor-design.md  2026-02-19-tushare-stock-basic-design.md
guide/: architecture.md  development-conventions.md  testing.md
migrations/: env.py
migrations/versions/: 20260219_1311_bae8ccdeb6df.py  20260220_0000_add_stock_basic_table.py  20260220_0820_5f4c9e8a6bf5.py  20260220_1915_eec6febc30ca.py  20260220_2219_457ca5f5dfdb.py  20260221_0018_add_third_code_index.py  20260221_0022_remove_foreign_key_constraints.py  (+2 more)
openspec/: config.yaml
scripts/: new_module.py
tests/: conftest.py
(+282 files in other folders)
