[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project]
name = "app"
version = "0.1.0"
description = "DDD-based FastAPI project skeleton"
requires-python = ">=3.11"
authors = [
  { name = "Developer" }
]
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "pydantic-settings>=2.1.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.26.0",
  "aiosqlite>=0.20.0",
  "faker>=22.0.0",
  "ruff>=0.1.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "import-linter>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "B024", "B027"]  # B008: FastAPI Depends(); B024/B027: marker ABCs, optional _validate

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "DDD layer boundaries"
type = "layers"
layers = [
    "(interfaces)",
    "application | infrastructure",
    "domain",
]
containers = [
    "app.shared_kernel",
    "app.modules.example",
]
